Fixed projects layout issues

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,4 @@
-div {
+body {
   color: #232323;
+  background-color: #fcfcfc;
 }
